--- a/composer.json
+++ b/composer.json
@@ -43,10 +43,10 @@
         "symfony/templating": "^2.7|^3.0|^4.0",
         "doctrine/inflector": "^1.0",
         "willdurand/negotiation": "^2.0",
-        "willdurand/jsonp-callback-validator": "^1.0"
+        "willdurand/jsonp-callback-validator": "^1.0",
+        "sensio/framework-extra-bundle": "^3.0.13|^4.0|^5.0"
     },
     "require-dev": {
-        "sensio/framework-extra-bundle": "^3.0.13|^4.0|^5.0",
         "symfony/phpunit-bridge": "^3.2|^4.0",
         "symfony/asset": "^2.7|^3.0|^4.0",
         "symfony/form": "^2.7|^3.0|^4.0",
