Add doctrine/common as a dependency
\FOS\RestBundle\Request\ParameterBag has a dependency to
\Doctrine\Common\Util\ClassUtils which originates from doctrine/common
which in turn a dependency of sensio/framework-extra-bundle but this is
declared as a dev-dependency. This causes an fatal error with the
message 'Class 'Doctrine\Common\Util\ClassUtils' not found'.
Fixes#259

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/templating": "^2.7|^3.0|^4.0",
         "doctrine/inflector": "^1.0",
         "willdurand/negotiation": "^2.0",
-        "willdurand/jsonp-callback-validator": "^1.0"
+        "willdurand/jsonp-callback-validator": "^1.0",
+        "doctrine/common": "^2.2"
     },
     "require-dev": {
         "sensio/framework-extra-bundle": "^3.0.13|^4.0|^5.0",
