--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
       env: SYMFONY_LTS='^3'
     # Symfony 4
     - php: 7.1
+    - php: 7.2
     # development dependencies
     - php: 7.1
       env: DEPENDENCIES='dev'
