--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     },
     "require-dev": {
         "sensio/framework-extra-bundle": "^3.0.13|^4.0|^5.0",
-        "symfony/phpunit-bridge": "^3.2|^4.0",
+        "symfony/phpunit-bridge": "^4.0",
         "symfony/asset": "^2.7|^3.0|^4.0",
         "symfony/form": "^2.7|^3.0|^4.0",
         "symfony/validator": "^2.7|^3.0|^4.0",
@@ -57,7 +57,7 @@
         "symfony/web-profiler-bundle": "^2.7|^3.0|^4.0",
         "symfony/twig-bundle": "^2.7|^3.0|^4.0",
         "symfony/browser-kit": "^2.7|^3.0|^4.0",
-        "symfony/dependency-injection": "^2.7|^3.0|^4.0",
+        "symfony/dependency-injection": "^2.7.20|^3.0|^4.0",
         "symfony/expression-language": "~2.7|^3.0|^4.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "phpoption/phpoption": "^1.1",
