--- a/composer.json
+++ b/composer.json
@@ -61,19 +61,20 @@
         "symfony/expression-language": "~2.7|^3.0|^4.0",
         "symfony/css-selector": "^2.7|^3.0|^4.0",
         "phpoption/phpoption": "^1.1",
-        "jms/serializer-bundle": "^1.2|^2.0",
+        "jms/serializer-bundle": "^2.0|^3.0",
+        "jms/serializer": "^1.13|^2.0",
         "psr/http-message": "^1.0"
     },
     "suggest": {
         "sensio/framework-extra-bundle": "Add support for the request body converter and the view response listener, requires ^3.0",
-        "jms/serializer-bundle": "Add support for advanced serialization capabilities, recommended, requires ^1.0",
+        "jms/serializer-bundle": "Add support for advanced serialization capabilities, recommended, requires ^2.0|^3.0",
         "symfony/expression-language": "Add support for using the expression language in the routing, requires ^2.7|^3.0",
         "symfony/serializer": "Add support for basic serialization capabilities and xml decoding, requires ^2.7|^3.0",
         "symfony/validator": "Add support for validation capabilities in the ParamFetcher, requires ^2.7|^3.0"
     },
     "conflict": {
         "sensio/framework-extra-bundle": "<3.0.13",
-        "jms/serializer-bundle": "<1.2.0",
+        "jms/serializer-bundle": "<2.0.0",
         "jms/serializer": "1.3.0"
     },
     "extra": {
