--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
     "conflict": {
         "sensio/framework-extra-bundle": "<3.0.13",
         "jms/serializer-bundle": "<2.0.0",
-        "jms/serializer": "1.3.0"
+        "jms/serializer": "<1.13.0"
     },
     "extra": {
         "branch-alias": {
