--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
       env: SYMFONY_LTS='^3'
     # Symfony 4
     - php: 7.1
+      env: SYMFONY_PHPUNIT_VERSION='6.5'
     - php: 7.2
     - php: 7.3
     # development dependencies
