--- a/composer.json
+++ b/composer.json
@@ -30,16 +30,16 @@
     "require": {
         "php": "^7.1",
         "psr/log": "^1.0",
-        "symfony/config": "^3.4|^4.3|^5.0",
-        "symfony/debug": "^3.4|^4.3|^5.0",
-        "symfony/dependency-injection": "^3.4|^4.3|^5.0",
-        "symfony/event-dispatcher": "^3.4|^4.3|^5.0",
-        "symfony/finder": "^3.4|^4.3|^5.0",
-        "symfony/framework-bundle": "^3.4|^4.3|^5.0",
-        "symfony/http-foundation": "^3.4|^4.3|^5.0",
-        "symfony/http-kernel": "^3.4|^4.3|^5.0",
-        "symfony/routing": "^3.4|^4.3|^5.0",
-        "symfony/security-core": "^3.4|^4.3|^5.0",
+        "symfony/config": "^3.4|^4.3",
+        "symfony/debug": "^3.4|^4.3",
+        "symfony/dependency-injection": "^3.4|^4.3",
+        "symfony/event-dispatcher": "^3.4|^4.3",
+        "symfony/finder": "^3.4|^4.3",
+        "symfony/framework-bundle": "^3.4|^4.3",
+        "symfony/http-foundation": "^3.4|^4.3",
+        "symfony/http-kernel": "^3.4|^4.3",
+        "symfony/routing": "^3.4|^4.3",
+        "symfony/security-core": "^3.4|^4.3",
         "doctrine/inflector": "^1.0",
         "willdurand/negotiation": "^2.0",
         "willdurand/jsonp-callback-validator": "^1.0"
@@ -47,17 +47,17 @@
     "require-dev": {
         "sensio/framework-extra-bundle": "^3.0.13|^4.0|^5.0",
         "symfony/phpunit-bridge": "^4.1.8",
-        "symfony/asset": "^3.4|^4.3|^5.0",
-        "symfony/form": "^3.4|^4.3|^5.0",
-        "symfony/validator": "^3.4|^4.3|^5.0",
-        "symfony/serializer": "^3.4|^4.3|^5.0",
-        "symfony/yaml": "^3.4|^4.3|^5.0",
-        "symfony/security-bundle": "^3.4|^4.3|^5.0",
-        "symfony/web-profiler-bundle": "^3.4|^4.3|^5.0",
-        "symfony/twig-bundle": "^3.4|^4.3|^5.0",
-        "symfony/browser-kit": "^3.4|^4.3|^5.0",
-        "symfony/expression-language": "^3.4|^4.3|^5.0",
-        "symfony/css-selector": "^3.4|^4.3|^5.0",
+        "symfony/asset": "^3.4|^4.3",
+        "symfony/form": "^3.4|^4.3",
+        "symfony/validator": "^3.4|^4.3",
+        "symfony/serializer": "^3.4|^4.3",
+        "symfony/yaml": "^3.4|^4.3",
+        "symfony/security-bundle": "^3.4|^4.3",
+        "symfony/web-profiler-bundle": "^3.4|^4.3",
+        "symfony/twig-bundle": "^3.4|^4.3",
+        "symfony/browser-kit": "^3.4|^4.3",
+        "symfony/expression-language": "^3.4|^4.3",
+        "symfony/css-selector": "^3.4|^4.3",
         "symfony/templating": "^3.4|^4.3",
         "phpoption/phpoption": "^1.1",
         "jms/serializer-bundle": "^2.3.1|^3.0",
