--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
         "phpoption/phpoption": "^1.1",
         "jms/serializer-bundle": "^2.3.1|^3.0",
         "jms/serializer": "^1.13|^2.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "suggest": {
         "sensio/framework-extra-bundle": "Add support for the request body converter and the view response listener, requires ^3.0",
