--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,18 @@ branches:
     - master
     - /^\d+\.(\d+|x)$/
 
+env:
+  # to be removed when tests succeed with Symfony 5.0 (see https://github.com/FriendsOfSymfony/FOSRestBundle/pull/2072)
+  - SYMFONY_REQUIRE="4.4.*"
+
 matrix:
   fast_finish: true
   include:
     # lowest dependencies
     - php: 7.1
       env: COMPOSER_FLAGS="--prefer-lowest"
-    # Symfony 3 LTS
     - php: 7.2
-      env: SYMFONY_REQUIRE="3.4.*"
-    # Symfony 4.3
     - php: 7.3
-      env: SYMFONY_REQUIRE="4.3.*"
     # Symfony 4.4
     - php: 7.4
       env: SYMFONY_REQUIRE="4.4.*"
