--- a/composer.json
+++ b/composer.json
@@ -30,37 +30,37 @@
     "require": {
         "php": "^7.1",
         "psr/log": "^1.0",
-        "symfony/config": "^3.4|^4.3|^5.0",
-        "symfony/debug": "^3.4|^4.3|^5.0",
-        "symfony/dependency-injection": "^3.4|^4.3|^5.0",
-        "symfony/event-dispatcher": "^3.4|^4.3|^5.0",
-        "symfony/finder": "^3.4|^4.3|^5.0",
-        "symfony/framework-bundle": "^3.4|^4.3|^5.0",
-        "symfony/http-foundation": "^3.4|^4.3|^5.0",
-        "symfony/http-kernel": "^3.4|^4.3|^5.0",
-        "symfony/routing": "^3.4|^4.3|^5.0",
+        "symfony/config": "^4.4|^5.0",
+        "symfony/debug": "^4.4|^5.0",
+        "symfony/dependency-injection": "^4.4|^5.0",
+        "symfony/event-dispatcher": "^4.4|^5.0",
+        "symfony/finder": "^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4.1|^5.0",
+        "symfony/http-foundation": "^4.4|^5.0",
+        "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/routing": "^4.4|^5.0",
         "symfony/security-core": "^3.4|^4.3|^5.0",
         "doctrine/inflector": "^1.0",
         "willdurand/negotiation": "^2.0",
         "willdurand/jsonp-callback-validator": "^1.0"
     },
     "require-dev": {
-        "sensio/framework-extra-bundle": "^3.0.13|^4.0|^5.0",
+        "sensio/framework-extra-bundle": "^5.2.3",
         "symfony/phpunit-bridge": "^4.1.8|^5.0",
-        "symfony/asset": "^3.4|^4.3|^5.0",
-        "symfony/form": "^3.4|^4.3|^5.0",
-        "symfony/validator": "^3.4|^4.3|^5.0",
-        "symfony/serializer": "^3.4|^4.3|^5.0",
-        "symfony/yaml": "^3.4|^4.3|^5.0",
-        "symfony/security-bundle": "^3.4|^4.3|^5.0",
-        "symfony/web-profiler-bundle": "^3.4|^4.3|^5.0",
-        "symfony/twig-bundle": "^3.4|^4.3|^5.0",
-        "symfony/browser-kit": "^3.4|^4.3|^5.0",
-        "symfony/expression-language": "^3.4|^4.3|^5.0",
-        "symfony/css-selector": "^3.4|^4.3|^5.0",
-        "symfony/templating": "^3.4|^4.3|^5.0",
+        "symfony/asset": "^4.4|^5.0",
+        "symfony/form": "^4.4|^5.0",
+        "symfony/validator": "^4.4|^5.0",
+        "symfony/serializer": "^4.4|^5.0",
+        "symfony/yaml": "^4.4|^5.0",
+        "symfony/security-bundle": "^4.4|^5.0",
+        "symfony/web-profiler-bundle": "^4.4|^5.0",
+        "symfony/twig-bundle": "^4.4|^5.0",
+        "symfony/browser-kit": "^4.4|^5.0",
+        "symfony/expression-language": "^4.4|^5.0",
+        "symfony/css-selector": "^4.4|^5.0",
+        "symfony/templating": "^4.4|^5.0",
         "phpoption/phpoption": "^1.1",
-        "jms/serializer-bundle": "^2.3.1|^3.0",
+        "jms/serializer-bundle": "^2.4.3|^3.0.1",
         "jms/serializer": "^1.13|^2.0|^3.0",
         "psr/http-message": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.0"
@@ -73,8 +73,9 @@
         "symfony/validator": "Add support for validation capabilities in the ParamFetcher, requires ^2.7|^3.0"
     },
     "conflict": {
-        "sensio/framework-extra-bundle": "<3.0.13",
-        "jms/serializer-bundle": "<2.0.0",
+        "sensio/framework-extra-bundle": "<5.2.3",
+        "symfony/error-handler": "<4.4.1",
+        "jms/serializer-bundle": "<2.4.3|3.0.0",
         "jms/serializer": "<1.13.0"
     },
     "extra": {
